# CoveMail

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  covemail-site  feature_implementation_plan.md  todo.md
crates/aether-ai/: Cargo.toml
crates/aether-ai/src/: error.rs  lib.rs  service.rs
crates/aether-calendar/: Cargo.toml
crates/aether-calendar/src/: backend.rs  error.rs  lib.rs  service.rs
crates/aether-config/: Cargo.toml
crates/aether-config/src/: error.rs  lib.rs  manager.rs  model.rs
crates/aether-core/: Cargo.toml
crates/aether-core/src/: lib.rs  model.rs
crates/aether-email/: Cargo.toml
crates/aether-email/src/: backend.rs  error.rs  lib.rs  service.rs
crates/aether-native/: Cargo.toml
crates/aether-native/src/: export.rs  main.rs
crates/aether-security/: Cargo.toml
crates/aether-security/src/: error.rs  keychain.rs  lib.rs  oauth.rs
crates/aether-storage/: Cargo.toml
crates/aether-storage/migrations/: 0001_init.sql
crates/aether-storage/src/: error.rs  lib.rs  search.rs  storage.rs
crates/aether-tasks/: Cargo.toml
crates/aether-tasks/src/: backend.rs  error.rs  lib.rs  service.rs
crates/cove-ai/: Cargo.toml
crates/cove-ai/src/: error.rs  lib.rs  service.rs
crates/cove-calendar/: Cargo.toml
crates/cove-calendar/src/: backend.rs  error.rs  lib.rs  service.rs
crates/cove-config/: Cargo.toml
crates/cove-config/src/: error.rs  lib.rs  manager.rs  model.rs
crates/cove-core/: Cargo.toml
crates/cove-core/src/: model.rs
crates/cove-email/: Cargo.toml
crates/cove-email/src/: backend.rs  error.rs  lib.rs  service.rs
crates/cove-native/: Cargo.toml
crates/cove-native/src/: export.rs  html_render.rs  main.rs  notifications.rs
crates/cove-security/: Cargo.toml
crates/cove-security/src/: error.rs  lib.rs  oauth.rs
crates/cove-storage/: Cargo.toml
crates/cove-storage/migrations/: 0002_attachment_content.sql  0003_competitive_features.sql  0004_calendar_rsvp_task_subtasks.sql
crates/cove-storage/src/: error.rs  lib.rs  search.rs  storage.rs
crates/cove-tasks/: Cargo.toml
crates/cove-tasks/src/: backend.rs  error.rs  lib.rs  service.rs
src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  main.rs  state.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css
ui/src/lib/: api.ts
ui/src/types/: index.ts
