[workspace]
members = [
  "src-tauri",
  "crates/cove-native",
  "crates/cove-core",
  "crates/cove-config",
  "crates/cove-security",
  "crates/cove-storage",
  "crates/cove-email",
  "crates/cove-calendar",
  "crates/cove-tasks",
  "crates/cove-ai",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cove Mail Contributors"]
license = "Apache-2.0"
repository = "https://github.com/PatSul/CoveMail"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
directories = "5"
keyring = "3"
oauth2 = { version = "5", default-features = false, features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rrule = "0.13"
ical = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "uuid", "chrono", "json", "migrate"] }
tantivy = "0.22"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }
mailparse = "0.15"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
imap = { version = "3.0.0-alpha.15", default-features = false, features = ["rustls-tls"] }
ammonia = "4"
base64 = "0.22"
regex = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
