[package]
name = "aether-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aether-ai = { path = "../crates/aether-ai" }
aether-calendar = { path = "../crates/aether-calendar" }
aether-config = { path = "../crates/aether-config" }
aether-core = { path = "../crates/aether-core" }
aether-email = { path = "../crates/aether-email" }
aether-security = { path = "../crates/aether-security" }
aether-storage = { path = "../crates/aether-storage" }
aether-tasks = { path = "../crates/aether-tasks" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
