[package]
name = "cove-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cove-ai = { path = "../crates/cove-ai" }
cove-calendar = { path = "../crates/cove-calendar" }
cove-config = { path = "../crates/cove-config" }
cove-core = { path = "../crates/cove-core" }
cove-email = { path = "../crates/cove-email" }
cove-security = { path = "../crates/cove-security" }
cove-storage = { path = "../crates/cove-storage" }
cove-tasks = { path = "../crates/cove-tasks" }
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
