[package]
name = "aether-native"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aether-ai = { path = "../aether-ai" }
aether-calendar = { path = "../aether-calendar" }
aether-config = { path = "../aether-config" }
aether-core = { path = "../aether-core" }
aether-email = { path = "../aether-email" }
aether-security = { path = "../aether-security" }
aether-storage = { path = "../aether-storage" }
aether-tasks = { path = "../aether-tasks" }
age = "0.10.0"
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
eframe = { version = "0.31", default-features = true }
egui = "0.31"
enigo = "0.1"
rfd = "0.17.2"
secrecy = "0.10.3"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
