[package]
name = "cove-email"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cove-core = { path = "../cove-core" }
cove-storage = { path = "../cove-storage" }
anyhow.workspace = true
ammonia.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
imap.workspace = true
lettre.workspace = true
mailparse.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
