[package]
name = "cove-native"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cove-ai = { path = "../cove-ai" }
cove-calendar = { path = "../cove-calendar" }
cove-config = { path = "../cove-config" }
cove-core = { path = "../cove-core" }
cove-email = { path = "../cove-email" }
cove-security = { path = "../cove-security" }
cove-storage = { path = "../cove-storage" }
cove-tasks = { path = "../cove-tasks" }
age = "0.10.0"
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
eframe = { version = "0.31", default-features = true }
egui = "0.31"
enigo = "0.1"
rfd = "0.17.2"
secrecy = "0.10.3"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
