[package]
name = "cove-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cove-core = { path = "../cove-core" }
anyhow.workspace = true
base64.workspace = true
keyring.workspace = true
oauth2.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
